fix imports in example 5

--- a/examples/example-5/example-5.ipynb
+++ b/examples/example-5/example-5.ipynb
@@ -21,8 +21,8 @@
    "source": [
     "import dataclasses\n",
     "from pathlib import Path\n",
-    "from lightningsimv2.model import Solution\n",
-    "from lightningsimv2.runner import Runner, RunnerStep"
+    "from lightningsim.model import Solution\n",
+    "from lightningsim.runner import Runner, RunnerStep"
    ]
   },
   {
